refactor: DTO 관련 리팩터링
- record를 사용하도록
- of/from 패턴을 사용하도록
- XXXResponse/Request 네이밍을 따르도록
- Entity를 DTO로 변환하는 경우 정적 팩토리 메서드를 사용하도록